Added Vertical Class to Paypal

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -208,7 +208,7 @@
               {% endif %}
 
               {% if additional_checkout_buttons %}
-                <div style="margin-top: 0 !important;" class="additional-checkout-buttons show-paypal-only">
+                <div style="margin-top: 0 !important;" class="additional-checkout-buttons additional-checkout-buttons--vertical show-paypal-only">
                   {{ content_for_additional_checkout_buttons }}
                 </div>
               {% endif %}
